[project]
name = "ai-driven"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "sentencepiece>=0.2.1",
    "streamlit>=1.57.0",
    "tiktoken>=0.12.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers==4.44.0",
]
